# SignalIOSystem

./: CMakeLists.txt  CMakeUserPresets.json  README.md
SignalIOSystem/: CMakeLists.txt  MainInterface.cpp  MainInterface.h  MainInterface.ui  NoiseGenerator.cpp  NoiseGenerator.h  SignalFilter.cpp  SignalFilter.h  SignalFreqDomainView.cpp  SignalFreqDomainView.h  SignalModel.cpp  SignalModel.h  SignalTimeDomainView.cpp  SignalTimeDomainView.h
data/: Signal.cfg
